--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >-                        # used by seo meta and the atom feed
   My personal blog
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://zino2201.github.io'
 
 github:
   username: Zino2201             # change to your github username
